--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -23,8 +23,8 @@ extra-source-files:
     CHANGELOG.md
     README.md
 
-executable abstract-algeba
-    main-is:          Main.hs
+executable definition-of-set
+    main-is:          DefinitionOfSet.hs
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
