--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -34,3 +34,15 @@ executable definition-of-set
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable sub-set
+    main-is:          Subset.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base ^>=4.16.4.0 , containers ^>=0.6.5.1
+    hs-source-dirs:   app
+    default-language: Haskell2010
