--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -24,7 +24,7 @@ extra-source-files:
     README.md
 
 executable definition-of-set
-    main-is:          DefinitionOfSet.hs
+    main-is:          1_DefinitionOfSet.hs
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
@@ -36,7 +36,7 @@ executable definition-of-set
     default-language: Haskell2010
 
 executable sub-set
-    main-is:          Subset.hs
+    main-is:          2_Subset.hs
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
