--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -46,3 +46,15 @@ executable sub-set
     build-depends:    base ^>=4.16.4.0 , containers ^>=0.6.5.1
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable transcendental-number
+    main-is:          3_TranscendentalNumber.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base ^>=4.16.4.0
+    hs-source-dirs:   app
+    default-language: Haskell2010
