--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -58,3 +58,15 @@ executable transcendental-number
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable cardinality
+    main-is:          3_Cardinality.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base ^>=4.16.4.0
+    hs-source-dirs:   app
+    default-language: Haskell2010
