--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -70,3 +70,15 @@ executable cardinality
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable cartesian_1
+    main-is:          5_cartesian_1.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base ^>=4.16.4.0
+    hs-source-dirs:   app
+    default-language: Haskell2010
