--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -72,7 +72,7 @@ executable cardinality
     default-language: Haskell2010
 
 executable cartesian_1
-    main-is:          5_cartesian_1.hs
+    main-is:          5_Cartesian_1.hs
 
     -- Modules included in this executable, other than Main.
     -- other-modules:
