--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -94,3 +94,15 @@ executable cartesian_2
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable mapping_1
+    main-is:          6_mapping_1.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base ^>=4.16.4.0
+    hs-source-dirs:   app
+    default-language: Haskell2010
