--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -106,3 +106,15 @@ executable mapping_1
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable mapping_2
+    main-is:          6_mapping_2.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base ^>=4.16.4.0
+    hs-source-dirs:   app
+    default-language: Haskell2010
