--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -118,3 +118,15 @@ executable mapping_2
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable function
+    main-is:          9_function.hs
+
+    -- Modules included in this executable, other than Main.
+    -- other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base ^>=4.16.4.0
+    hs-source-dirs:   app
+    default-language: Haskell2010
