--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -88,3 +88,9 @@ executable binary-operation_3
     build-depends:    base ^>=4.16.4.0
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable semi-group
+    main-is:          14_semi-groub_1.hs
+    build-depends:    base ^>=4.16.4.0
+    hs-source-dirs:   app
+    default-language: Haskell2010
