--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -89,8 +89,14 @@ executable binary-operation_3
     hs-source-dirs:   app
     default-language: Haskell2010
 
-executable semi-group
+executable semi-group_1
     main-is:          14_semi-groub_1.hs
     build-depends:    base ^>=4.16.4.0
+    hs-source-dirs:   app
+    default-language: Haskell2010
+
+executable group-ex_1
+    main-is:          18_group_1.hs
+    build-depends:    base ^>=4.16.4.0, groups ^>=0.5.3
     hs-source-dirs:   app
     default-language: Haskell2010
