--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -100,3 +100,9 @@ executable group-ex_1
     build-depends:    base ^>=4.16.4.0, groups ^>=0.5.3
     hs-source-dirs:   app
     default-language: Haskell2010
+
+executable group-ex_2
+    main-is:          19_group_2.hs
+    build-depends:    base ^>=4.16.4.0, groups ^>=0.5.3
+    hs-source-dirs:   app
+    default-language: Haskell2010
