--- a/abstract-algeba.cabal
+++ b/abstract-algeba.cabal
@@ -95,6 +95,12 @@ executable semi-group_1
     hs-source-dirs:   app
     default-language: Haskell2010
 
+executable semi-group_2
+    main-is:          15_semi-groub_2.hs
+    build-depends:    base ^>=4.16.4.0, magmas ^>=0.0.1
+    hs-source-dirs:   app
+    default-language: Haskell2010
+
 executable group-ex_1
     main-is:          18_group_1.hs
     build-depends:    base ^>=4.16.4.0, groups ^>=0.5.3
